added section on shallow water characteristic bc

--- a/doc/dissertation/chapter2.tex
+++ b/doc/dissertation/chapter2.tex
@@ -20,6 +20,8 @@
   \input{content/discretization/spatial_discretization}
   \subsubsection{The Shallow Water Equations}
   \input{content/discretization/shallowwater}
+    \paragraph{Boundary Conditions}
+    \input{content/discretization/shallowwater_bc}
 \subsection{Temporal Discretization\label{sec:temporal_discretization}}
   \subsubsection{Explicit Euler Scheme}
     \input{content/discretization/explicit_euler}
