--- a/doc/dissertation/content/newestcommands.tex
+++ b/doc/dissertation/content/newestcommands.tex
@@ -9,6 +9,7 @@
 \newcommand{\timeindex}{n}
 \newcommand{\speed}{v}
 \newcommand{\velocity}{\mathbf{\speed}}
+\newcommand{\velocityx}{u}
 \newcommand{\normalvectorletter}{n}
 \newcommand{\normalvector}{\mathbf{\normalvectorletter}}
 \newcommand{\normalx}{\normalvectorletter_x}
@@ -191,6 +192,10 @@
 \newcommand{\intboundary}[1]{\int\limits_{\domainboundary} #1 \,d\area}
 \newcommand{\intSi}{\int\limits_{\support_i}}
 \newcommand{\intSij}{\int\limits_{\support_{i,j}}}
+
+% BC
+\newcommand{\interior}{_{\text{in}}}
+\newcommand{\BC}{_{\text{BC}}}
 
 % common fractions
 \newcommand{\half}{\frac{1}{2}}
