more work on open bc

--- a/doc/notes/methodology/methodology.tex
+++ b/doc/notes/methodology/methodology.tex
@@ -17,11 +17,11 @@
 \maketitle
 %\tableofcontents
 
-\section{Equations}
-\input{../../dissertation/content/preliminaries/shallowwater}
-\section{Weak Form}
-\input{../../dissertation/content/discretization/shallowwater}
-\section{Boundary Conditions}
+%\section{Equations}
+%\input{../../dissertation/content/preliminaries/shallowwater}
+%\section{Weak Form}
+%\input{../../dissertation/content/discretization/shallowwater}
+%\section{Boundary Conditions}
 \input{../../dissertation/content/discretization/shallowwater_bc}
 %===============================================================================
 %\section{Preliminaries}
