fixed some documentation and added new content

--- a/doc/dissertation/chapter2.tex
+++ b/doc/dissertation/chapter2.tex
@@ -20,8 +20,6 @@
   \input{content/discretization/spatial_discretization}
   \subsubsection{The Shallow Water Equations}
   \input{content/discretization/shallowwater}
-    \paragraph{Boundary Conditions}
-    \input{content/discretization/shallowwater_bc}
 \subsection{Temporal Discretization\label{sec:temporal_discretization}}
   \subsubsection{Explicit Euler Scheme}
     \input{content/discretization/explicit_euler}
@@ -30,6 +28,13 @@
     \input{content/discretization/ssprk}
   \subsubsection{Theta Schemes\label{sec:theta}}
     \input{content/discretization/theta}
+%===============================================================================
+\section{Boundary Conditions}\label{sec:boundary_conditions}
+%===============================================================================
+\subsection{Characteristic Boundary Conditions for the Shallow Water Equations}
+  \input{content/bc/characteristic}
+\subsection{Wall Boundary Conditions for the Shallow Water Equations}
+  \input{content/bc/wall}
 %===============================================================================
 \section{Low-Order Schemes}  
 %===============================================================================
