--- a/doc/dissertation/content/newestcommands.tex
+++ b/doc/dissertation/content/newestcommands.tex
@@ -173,7 +173,9 @@
 \newcommand{\heightmomentum}{\mathbf{\heightmomentumletter}}
 \newcommand{\heightmomentumx}{\heightmomentumletter_x}
 \newcommand{\heightmomentumy}{\heightmomentumletter_y}
+\newcommand{\heightmomentumd}{\heightmomentumletter_d}
 \newcommand{\bathymetry}{b}
+\newcommand{\waterlevel}{w}
 \newcommand{\gravity}{g}
 \newcommand{\speedofsound}{a}
 
