--- a/doc/results/problem_descriptions/shallowwater.tex
+++ b/doc/results/problem_descriptions/shallowwater.tex
@@ -12,7 +12,7 @@ Table \ref{tab:1d_dam_break_flat} summarizes the test parameters.
 \begin{mytable}{1-D Dam Break over Flat Terrain Test Problem Summary}
 {1d_dam_break_flat}{l l}
 {\emph{Parameter} & \emph{Value}}
-Domain              & $\domain = (-5,5)$\\
+Domain              & $\domain = [-5,5]$\\
 Initial Conditions  & $(\height,\speed)^T(x,0) = \left\{\begin{array}{l l}
   (3,0)^T & x < 0\\
   (1,0)^T & \text{otherwise}\\
@@ -31,30 +31,16 @@ terrain beneath the water surface, taken from \cite{chen2013} and
 \cite{vukovic2002}. This bump straddles the dam so that essentially
 the initial values for the height $\height$ are defined in 4 regions, so this is
 not a classic 2-region Riemann value problem. The bump is nominally in the
-region $|x-750|\leq 187.5$, i.e., $x\in(\tilde{x}_{\text{bump,L}},
-\tilde{x}_{\text{bump,R}})=(562.5,937.5)$; 
-however, the bump edges are chosen to be coincident with the mesh so
-that the gradient $\nabla\bathymetry$ need not be evaluated, due to the
-discontinuity at the bump's edges. Therefore the actual bump edges
-are chosen to be $(x_{\text{bump,L}},x_{\text{bump,R}})$, which
-are computed as
-\begin{equation}
-  x_{\text{bump,L}} = \text{round}\pr{\frac{\tilde{x}_{\text{bump,L}}}
-  {\Delta x}}\Delta x
-  \eqc \quad
-  x_{\text{bump,R}} = \text{round}\pr{\frac{\tilde{x}_{\text{bump,R}}}
-  {\Delta x}}\Delta x
-  \eqc
-\end{equation}
-where the $\text{round}()$ function rounds the operand to the nearest integer,
-and $\Delta x$ is a uniform mesh size.
+region $|x-750|\leq 187.5$, i.e., $x\in(562.5,937.5)$; 
+however, the bump profile, i.e., the bathyemetry function $\bathymetry(x)$,
+is interpolated to the finite element space.
 Typical end times are $\timevalue=15$ and $\timevalue=55$.
 Table \ref{tab:1d_dam_break_bump} summarizes the test parameters.
 
 \begin{mytable}{1-D Dam Break over Flat Terrain Test Problem Summary}
 {1d_dam_break_bump}{l l}
 {\emph{Parameter} & \emph{Value}}
-Domain              & $\domain = (0,1500)$\\
+Domain              & $\domain = [0,1500]$\\
 Initial Conditions  & $(\height+\bathymetry,\speed)^T(x,0)
   = \left\{\begin{array}{l l}
   (20,0)^T & x < 750\\
@@ -65,7 +51,7 @@ Boundary Conditions & $(\height,\speed)^T(-5,\timevalue) = (3,0)^T$\\
 Gravity & $\gravity = 9.812$\\
 Bottom Topography & $\bathymetry(x)
   = \left\{\begin{array}{l l}
-  8 & x_{\text{bump,L}}\leq x\leq x_{\text{bump,R}}\\
+  8 & |x-750|\leq 187.5\\
   0 & \text{otherwise}\\
   \end{array}\right.$\\
 \end{mytable}
@@ -73,18 +59,20 @@ Bottom Topography & $\bathymetry(x)
 \subsection{1-D Lake at Rest}\label{sec:1d_lake_at_rest}
 %--------------------------------------------------------------------------------
 This is a 1-D problem in which a lake sits at rest over a nonzero bottom
-topography.
-$\bathymetry(x)=0$, taken from \cite{fjordholm2011} and \cite{goutal1997}.
+topography $\bathymetry(x)$, taken from \cite{fjordholm2011} and \cite{goutal1997}.
+The bathymetry function $\bathymetry(x)$ is interpolated to the finite
+element space so that the desired constant water level solution
+$\approximate{\waterlevel}\equiv\approximate{\height} + \approximate{\bathymetry}$
+can be achieved.
 A typical end time is $\timevalue=100$.
 Table \ref{tab:1d_lake_at_rest} summarizes the test parameters.
 
 \begin{mytable}{1-D Lake at Rest Test Problem Summary}
 {1d_lake_at_rest}{l l}
 {\emph{Parameter} & \emph{Value}}
-Domain              & $\domain = (0,20)$\\
+Domain              & $\domain = [0,20]$\\
 Initial Conditions  & $(\height+\bathymetry,\speed)^T(x,0) = (1,0)^T$\\
-Boundary Conditions & $(\height,\speed)^T(0, \timevalue) = (1,0)^T$\\
-                    & $(\height,\speed)^T(20,\timevalue) = (1,0)^T$\\
+Boundary Conditions & Open\\
 Gravity & $\gravity = 9.812$\\
 Bottom Topography & $\bathymetry(x)
   = \left\{\begin{array}{l l}
@@ -105,17 +93,64 @@ Table \ref{tab:1d_lake_at_rest_perturbed} summarizes the test parameters.
 \begin{mytable}{1-D Lake at Rest with Perturbation Test Problem Summary}
 {1d_lake_at_rest_perturbed}{l l}
 {\emph{Parameter} & \emph{Value}}
-Domain              & $\domain = (0,20)$\\
+Domain              & $\domain = [0,20]$\\
 Initial Conditions  & $(\height+\bathymetry)(x,0) = \left\{\begin{array}{l l}
                         1.01 & |x-6|<\frac{1}{4}\\
                         1    & \mbox{otherwise}\end{array}\right.$\\
                     & $\speed(x,0) = 0$\\
-Boundary Conditions & $(\height,\speed)^T(0, \timevalue) = (1,0)^T$\\
-                    & $(\height,\speed)^T(20,\timevalue) = (1,0)^T$\\
+Boundary Conditions & Open\\
 Gravity & $\gravity = 9.812$\\
 Bottom Topography & $\bathymetry(x)
   = \left\{\begin{array}{l l}
   \frac{4-(x-10)^2}{20} & |x - 10| < 2\\
   0                     & \text{otherwise}\\
   \end{array}\right.$\\
+\end{mytable}
+%--------------------------------------------------------------------------------
+\subsection{2-D Lake at Rest}\label{sec:2d_lake_at_rest}
+%--------------------------------------------------------------------------------
+This is a 2-D problem in which a lake sits at rest over a nonzero bottom
+topography $\bathymetry(x)$, taken from \cite{fjordholm2011}.
+The bathymetry function $\bathymetry(x)$ is interpolated to the finite
+element space so that the desired constant water level solution
+$\approximate{\waterlevel}\equiv\approximate{\height} + \approximate{\bathymetry}$
+can be achieved.
+A typical end time is $\timevalue=100$.
+Table \ref{tab:2d_lake_at_rest} summarizes the test parameters.
+
+\begin{mytable}{2-D Lake at Rest Test Problem Summary}
+{2d_lake_at_rest}{l l}
+{\emph{Parameter} & \emph{Value}}
+Domain              & $\domain = [0,2]\times[0,1]$\\
+Initial Conditions  &
+  $(\height+\bathymetry,\velocity)^T(x,y,0) = (1,\mathbf{0})^T$\\
+Boundary Conditions & Open\\
+Gravity & $\gravity = 9.812$\\
+Bottom Topography &
+  $\bathymetry(x,y) = 0.8\exp\pr{-5(x-0.9)^2 - 50(y-0.5)^2}$\\
+Exact Solution    &
+  $(\height+\bathymetry,\velocity)^T(x,0) = (1,\mathbf{0})^T$\\
+\end{mytable}
+%--------------------------------------------------------------------------------
+\subsection{2-D Lake at Rest with Perturbation}
+  \label{sec:2d_lake_at_rest_perturbed}
+%--------------------------------------------------------------------------------
+This test problem, taken from \cite{fjordholm2011}, is the same lake-at-rest
+problem as in Section \ref{sec:2d_lake_at_rest} but with an initial
+perturbation in the region $x\in[0.1,0.2]$, where the initial height is
+increased by 0.01.
+Table \ref{tab:2d_lake_at_rest_perturbed} summarizes the test parameters.
+
+\begin{mytable}{2-D Lake at Rest with Perturbation Test Problem Summary}
+{2d_lake_at_rest_perturbed}{l l}
+{\emph{Parameter} & \emph{Value}}
+Domain              & $\domain = [0,2]\times[0,1]$\\
+Initial Conditions  & $(\height+\bathymetry)(x,y,0) = \left\{\begin{array}{l l}
+                        1.01 & x\in[0.1,0.2]\\
+                        1    & \mbox{otherwise}\end{array}\right.$\\
+                    & $\velocity(\mathbf{x},0) = \mathbf{0}$\\
+Boundary Conditions & Open\\
+Gravity & $\gravity = 9.812$\\
+Bottom Topography &
+  $\bathymetry(x,y) = 0.8\exp\pr{-5(x-0.9)^2 - 50(y-0.5)^2}$\\
 \end{mytable}
