--- a/doc/dissertation/content/bc/characteristic.tex
+++ b/doc/dissertation/content/bc/characteristic.tex
@@ -8,8 +8,8 @@ the right and left boundaries:
 \end{equation}
 \begin{equation}\label{eq:boundary_momentumx_1d}
   \intboundary{\testfunction_i^{\heightmomentumx}
-    \pr{\frac{\tilde{\heightmomentumx}^2}{\height}
-    + \frac{1}{2}\gravity\tilde{\height}^2}\normalx}
+    \pr{\frac{\tilde{\heightmomentumx}}{\height}\approximate{\heightmomentum}
+    + \frac{1}{2}\gravity\tilde{\height}^2\unitvector{x}}\cdot\normalvector}
   = \pr{\height\velocityx^2 + \half\gravity\height^2}_R
     -\pr{\height\velocityx^2 + \half\gravity\height^2}_L
   \eqc
@@ -17,8 +17,7 @@ the right and left boundaries:
 \end{subequations}
 where $R$ and $L$ denote right and left boundaries, respectively.
 
-In 1-D, there are 2 characteristics, associated with the following Riemann
-invariants:
+In 1-D, there are 2 characteristics:
 \begin{subequations}
 \begin{equation}
   d\velocityx - 2d\speedofsound = 0\eqc
@@ -27,10 +26,12 @@ invariants:
   d\velocityx + 2d\speedofsound = 0 \eqc
 \end{equation}
 \end{subequations}
+giving the Riemann invariants $\velocityx - 2\speedofsound$ and
+$\velocityx + 2\speedofsound$,
 which correspond to the eigenvalues $\lambda_1=\velocityx - \speedofsound$ and
 $\lambda_2=\velocityx + \speedofsound$, respectively.
-Integrating these from the boundary position $x\BC$ to the adjacent
-node position $x\interior$ gives
+Integrating the characteristics from the boundary position $x\BC$ to an interior
+position $x\interior$ gives
 \begin{subequations}
 \begin{equation}\label{eq:characteristic_bc_1}
   \velocityx\interior - \velocityx\BC
@@ -71,18 +72,48 @@ and $\lambda_2\geq 0$ for $\velocityx<0$, and for $\velocityx\geq 0$,
 the signs are $\lambda_1\leq 0$ and $\lambda_2\leq 0$. Thus for supercritical
 flow, inlets, i.e., boundaries for which $\velocityx\normalx<0$, require
 2 external boundary conditions, whereas outlets use 2 internal boundary
-conditions. Table \ref{tab:shallowwater_bc} summarizes the
-applications of open boundary conditions for different scenarios.
+conditions. Tables \ref{tab:shallowwater_open_bc} and \ref{tab:shallowwater_wall_bc}
+summarize the
+application of open and wall boundary conditions, respectively.
 
 \begin{mytable}
-{Summary of Open Boundary Conditions for the Shallow Water Equations}
-{shallowwater_bc}{l l}{\textbf{Scenario} & \textbf{Equations}}
-  Subcritical Left Boundary & Provide $\speedofsound_0$\\
-  (Inlet or Outlet)& $\velocityx_0 = \velocityx_1
-    + 2\pr{\speedofsound_0 - \speedofsound_1}$\\\hline
-  Subcritical Right Boundary & Provide $\speedofsound_{N-1}$\\
-  (Inlet or Outlet)& $\velocityx_{N-1} = \velocityx_{N-2}
-    + 2\pr{\speedofsound_{N-2} - \speedofsound_{N-1}}$\\\hline
-  Supercritical Inlet & Provide $\speedofsound_0$, $\velocityx_0$\\\hline
-  Supercritical Outlet & ?\\
+{Summary of Open Boundary Conditions for the 1-D Shallow Water Equations}
+{shallowwater_open_bc}{l l}{\textbf{Case} & \textbf{Equations}}
+  Subcritical Left Boundary &
+    Provide $\speedofsound\BC$ \\
+  (Inlet or Outlet)         &
+    $\velocityx\BC = \velocityx\interior
+      + 2\pr{\speedofsound\BC - \speedofsound\interior}$ \\\hline
+  Subcritical Right Boundary &
+    Provide $\speedofsound\BC$ \\
+  (Inlet or Outlet)          &
+    $\velocityx\BC = \velocityx\interior
+      + 2\pr{\speedofsound\interior - \speedofsound\BC}$ \\\hline
+  Supercritical Inlet &
+    Provide $\speedofsound\BC$ \\
+  & Provide $\velocityx\BC$ \\\hline
+  Supercritical Outlet &
+    $\speedofsound\BC = \speedofsound\interior$ \\
+  & $\velocityx\BC = \velocityx\interior$ \\
+\end{mytable}
+
+\begin{mytable}
+{Summary of Wall Boundary Conditions for the 1-D Shallow Water Equations}
+{shallowwater_wall_bc}{l l}{\textbf{Case} & \textbf{Equations}}
+  Subcritical Left Boundary &
+    Provide $\velocityx\BC = 0$\\
+  (Inlet or Outlet)         &
+    $\speedofsound\BC = \speedofsound\interior
+      + \half\pr{\velocityx\BC - \velocityx\interior}$\\\hline
+  Subcritical Right Boundary &
+    Provide $\velocityx\BC=0$\\
+  (Inlet or Outlet)          &
+    $\speedofsound\BC = \speedofsound\interior
+      + \half\pr{\velocityx\interior - \velocityx\BC}$ \\\hline
+  Supercritical Inlet &
+    Provide $\velocityx\BC$\\
+  & Provide $\speedofsound\BC$\\\hline
+  Supercritical Outlet &
+    $\velocityx\BC = \velocityx\interior$ \\
+  & $\speedofsound\BC = \speedofsound\interior$ \\
 \end{mytable}
