--- a/doc/meetings/6-22-2015.tex
+++ b/doc/meetings/6-22-2015.tex
@@ -10,32 +10,33 @@ See the results document.
 
 The symmetric limiting coefficients have the following definition:
 \begin{equation}
-  L\ij = \left\{\begin{array}{l l}
-    \min\{R_i^+,R_j^-\}, & F\ij > 0 \\
-    \min\{R_i^-,R_j^+\}, & F\ij < 0
-  \end{array}\right.,
+  \limiterletter\ij = \left\{\begin{array}{l l}
+    \min\{\limiterletter_i^+,\limiterletter_j^-\}, & \correctionfluxij > 0 \\
+    \min\{\limiterletter_i^-,\limiterletter_j^+\}, & \correctionfluxij < 0
+  \end{array}\right.
+  \eqc
 \end{equation}
 while the upwind-biased limiting coefficients have the following definition:
 \begin{equation}
-  L\ij = \left\{\begin{array}{l l}
-    R_k^+, & F\ij > 0 \\
-    R_k^-, & F\ij < 0
+  \limiterletter\ij = \left\{\begin{array}{l l}
+    \limiterletter_k^+, & F\ij > 0 \\
+    \limiterletter_k^-, & F\ij < 0
   \end{array}\right.,
 \end{equation}
 where $k$ is the upwind node of $i$ and $j$. It is noted here that, unlike
 the symmetric limiting coefficients, the upwind-biased limiting coefficients
 do not necessarily satisfy the discrete maximum principle. This is disproved
 here by a counterexample. Recall that the discrete maximum principle is satisfied when
-$Q_i^-\le \sum_j L\ij F\ij\le Q_i^+$. Suppose a node $i$ has a single
+$Q_i^-\le \sum_j \limiterletter\ij F\ij\le Q_i^+$. Suppose a node $i$ has a single
 neighboring node $i-1$, and that this neighbor is upwind of $i$. For example, this is
 the case for a 1-D domain on the outflow boundary. Thus there is a single
-correction flux $F_{i,i-1}$: $\sum_j L\ij F\ij=L_{i,i-1} F_{i,i-1}$. Now
+correction flux $F_{i,i-1}$: $\sum_j \limiterletter\ij F\ij=\limiterletter_{i,i-1} F_{i,i-1}$. Now
 suppose that without limitation, this correction flux would exceed the
 upper bound $Q_i^+$, i.e., $F_{i,i-1}>Q_i^+$. Suppose further that
 $P_{i-1}^+\leq Q_{i-1}^+$. Then,
 \[
-  \sum\limits_j L\ij F\ij=
-  L_{i,i-1} F_{i,i-1}=
+  \sum\limits_j \limiterletter\ij F\ij=
+  \limiterletter_{i,i-1} F_{i,i-1}=
   R_{i-1}^+ F_{i,i-1}=
   \min\left\{1,\frac{Q_{i-1}^+}{P_{i-1}^+}\right\} F_{i,i-1}=
   F_{i,i-1}>
