--- a/doc/meetings/meetings.tex
+++ b/doc/meetings/meetings.tex
@@ -11,7 +11,8 @@
 \setlength{\topmargin}{0in}
 \setlength{\textwidth}{6.5in}
 
-\input{../dissertation/content/newcommands}
+%\input{../dissertation/content/newcommands}
+\input{../dissertation/content/newestcommands}
 
 % define colors
 \colorlet{darkgreen}{green!90!black}
@@ -40,9 +41,10 @@ Legend:
   \completeitem{Complete item}
   \incompleteitem{Incomplete item}
 \end{itemize}
-\input{6-22-2015}
-\input{6-23-2015}
-\input{7-21-2015}
+%\input{6-22-2015}
+%\input{6-23-2015}
+%\input{7-21-2015}
+\input{10-26-2015}
 \bibliographystyle{plain}
 \bibliography{../dissertation/references}
 \end{document}
