--- a/doc/meetings/meetings.tex
+++ b/doc/meetings/meetings.tex
@@ -36,15 +36,15 @@
 
 % begin document
 \begin{document}
-Legend:
-\begin{itemize}
-  \completeitem{Complete item}
-  \incompleteitem{Incomplete item}
-\end{itemize}
+%Legend:
+%\begin{itemize}
+%  \completeitem{Complete item}
+%  \incompleteitem{Incomplete item}
+%\end{itemize}
 %\input{6-22-2015}
 %\input{6-23-2015}
 %\input{7-21-2015}
 \input{10-26-2015}
-\bibliographystyle{plain}
-\bibliography{../dissertation/references}
+%\bibliographystyle{plain}
+%\bibliography{../dissertation/references}
 \end{document}
